fixed overflow

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,9 +1,8 @@
 .header {
-  overflow: hidden;
+  position: absolute;
 }
 
 .header-conteiner {
-  position: absolute;
   padding-top: 8px;
 
   @include tab {
